UI improvements and fixed slider issue that overlapped Login button on navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33,4 +33,47 @@
   height: 100%;
 }
 
-/*# sourceMappingURL=app.css.map */
+h1, h2, h3 {
+  font-family: 'Playfair Display', serif;
+}
+
+body, p, span, div, a, li, ul, ol, input, button {
+  font-family: 'Lato', sans-serif;
+}
+
+body{
+  background-color: #F5F5DC;
+}
+
+h1, .navbar-brand {
+  color: #6B8E23;
+}
+
+.navbar
+{
+  z-index:5;
+}
+
+.navbar-brand
+{
+  font-weight: 700;
+  font-family: 'Playfair Display', serif;
+}
+
+h5
+{
+  color: #307317 !important;
+}
+
+a{
+  color:#ff5d17;
+}
+
+.form-group .form-control
+{
+  font-family: "Merriweather", serif;
+  font-style: italic;
+  color:#307317;
+}
+
+/*# sourceMappingURL=app.css.map */ 
